navbar, spacing fixings

--- a/src/Amigmun.css
+++ b/src/Amigmun.css
@@ -42,7 +42,7 @@
     text-align: center;
     text-align: center;
     font-family: 'Poppins';
-    font-size: 3vw;
+    font-size: 3.3vw;
     font-weight: 600;
     margin-top: 2vw;
     background: linear-gradient(90deg, #0578FF 0.01%, #8CC1FF 212%);
@@ -57,25 +57,25 @@
     flex-wrap: wrap;
     margin-top: 5vw;
     justify-content: center;
-    width: 72%;
-    margin-left: 14%;
-    gap: 3%;
+    width: 76%;
+    margin-left: 12%;
+    gap: 5%;
 }
 
 .sec-cards{
     width: 22%;
-    height: 4vw;
-    border: 0.1vw solid black;
+    height: 5.5vw;
+    border: 0.1vw solid #ADADAD;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: 'poppins';
-    font-size: 1.1vw;
+    font-size: 1.35vw;
     border-radius: 7px;
     text-align: center;
     padding: 1vw;
-    margin-bottom: 2vw;
+    margin-bottom: 4vw;
 }
 
 .com-grp{
@@ -91,7 +91,7 @@
 
 .com-card{
     width: 28%;
-    border: 0.1vw solid black;
+    border: 0.1vw solid #ADADAD;
     font-family: 'poppins';
     border-radius: 7px;
     text-align: left;
